edit model add json response and show and update category

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 URL=http://localhost:3000/
 
-MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact"
+MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact?parseTime=true"
