edit test add register user

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ PORT=3000
 URL=http://localhost:3000/
 
 MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact?parseTime=true"
+
+
+SMTPHost=smtp_host
+SMTPPort =smtp_port
+SMTPUsername= smtp_username
+SMTPPassword=smtp_password
