--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,11 @@
 PORT=3000
 URL=http://localhost:3000/
 
-MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact"
+MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact?parseTime=true"
+
+SMTPHost=smtp_host
+SMTPPort =smtp_port
+SMTPUsername= smtp_username
+SMTPPassword=smtp_password
+SMTPPORT=2154
+SMTPINTITY=intity
