--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 URL=http://localhost:3000/
 
-MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact?parseTime=true"
+MYSQL_DB_URL="root:@tcp(127.0.0.1:3306)/dbs-ginprojeact?charset=utf8mb4&parseTime=True&loc=Local"
 
 
 SMTPHost=smtp_host
@@ -10,3 +10,4 @@ SMTPUsername= smtp_username
 SMTPPassword=smtp_password
 SMTPPORT=2154
 SMTPINTITY=intity
+TOKEN_HOUR_LIFESPAN=205040
